[gd_scene load_steps=2 format=3 uid="uid://yks8kr6f3a5e"]

[ext_resource type="Script" path="res://notebook/notebook.gd" id="1_naj0i"]

[node name="Window" type="Window"]
title = "NoteBook"
position = Vector2i(46, 94)
size = Vector2i(290, 395)
script = ExtResource("1_naj0i")

[node name="TabContainer2" type="TabContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Notes" type="TabBar" parent="TabContainer2"]
layout_mode = 2

[node name="NoteEdit" type="TextEdit" parent="TabContainer2/Notes"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Remember to save!

Right click in an empty area to quickly close."
wrap_mode = 1

[node name="Info" type="TabBar" parent="TabContainer2"]
visible = false
layout_mode = 2

[node name="InfoEdit" type="TextEdit" parent="TabContainer2/Info"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Other" type="TabBar" parent="TabContainer2"]
visible = false
layout_mode = 2

[node name="OtherEdit" type="TextEdit" parent="TabContainer2/Other"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SaveTxt2" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -85.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Save"

[node name="NoteArea" type="Polygon2D" parent="."]
unique_name_in_owner = true
visible = false
polygon = PackedVector2Array(30, 55, 30, 467, 418, 467, 418, 55)

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="SaveTxt2" to="." method="_on_save_txt_2_pressed"]
